tests/neg-macros/i4396b.scala
import scala.quoted.*
def test(using Quotes) = {
  '{ case class Foo() } // error
}